--- a/html/productos.html
+++ b/html/productos.html
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-    <header class="navbar navbar-expand-lg">
+    <header class="navbar navbar-expand-lg" data-bs-theme="dark">
         <nav class="container-fluid">
             <a class="navbar-brand" href="../index.html">
                 <img class="logo" src="../img/tropilogo.png" alt="logo tropitango">
@@ -44,105 +44,103 @@
     </header>
 
     <main>
+        <div class="container">
+            <div class="titulos mt-1">
+                <h1> Productos </h1>
+            </div>
 
-        <div class="titulos mt-1">
-            <h1> Productos </h1>
+            <div class="row contenedorProductos">
+                <div class="col-xl-3 col-md-4 col-sm-12">
+                    <div class="card text-center">
+                        <img src="../img/llavero.jpg" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <p class="card-title"> Llavero </p>
+                            <p class="card-text"> <strong> $1000 </strong> </p>
+                            <a href="#" class="btn colorBtn"> Comprar </a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-xl-3 col-md-4 col-sm-12">
+                    <div class="card text-center">
+                        <img src="../img/botella.jpg" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <p class="card-title"> Botella </p>
+                            <p class="card-text"> <strong> $1500 </strong> </p>
+                            <a href="#" class="btn colorBtn"> Comprar </a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-xl-3 col-md-4 col-sm-12">
+                    <div class="card text-center">
+                        <img src="../img/vaso.jpg" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <p class="card-title"> Vaso Termico </p>
+                            <p class="card-text"> <strong> $2000 </strong> </p>
+                            <a href="#" class="btn colorBtn"> Comprar </a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-xl-3 col-md-4 col-sm-12">
+                    <div class="card text-center">
+                        <img src="../img/termo.jpg" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <p class="card-title"> Termo </p>
+                            <p class="card-text"> <strong> $3000 </strong> </p>
+                            <a href="#" class="btn colorBtn"> Comprar </a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-xl-3 col-md-4 col-sm-12">
+                    <div class="card text-center">
+                        <img src="../img/campera.jpg" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <p class="card-title"> Campera </p>
+                            <p class="card-text"> <strong> $9500 </strong> </p>
+                            <a href="#" class="btn colorBtn"> Comprar </a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-xl-3 col-md-4 col-sm-12">
+                    <div class="card text-center">
+                        <img src="../img/gorra.jpg" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <p class="card-title"> Gorra </p>
+                            <p class="card-text"> <strong> $2500 </strong> </p>
+                            <a href="#" class="btn colorBtn"> Comprar </a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-xl-3 col-md-4 col-sm-12">
+                    <div class="card text-center">
+                        <img src="../img/remera.jpg" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <p class="card-title"> Remera </p>
+                            <p class="card-text"> <strong> $4500 </strong> </p>
+                            <a href="#" class="btn colorBtn"> Comprar </a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-xl-3 col-md-4 col-sm-12">
+                    <div class="card text-center">
+                        <img src="../img/buzo.jpg" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <p class="card-title"> Buzo </p>
+                            <p class="card-text"> <strong> $8500 </strong> </p>
+                            <a href="#" class="btn colorBtn"> Comprar </a>
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+
         </div>
-
-        <div class="row contenedorProductos">
-            <div class="col-xl-3 col-md-4 col-sm-12">
-                <div class="card text-center">
-                    <img src="../img/llavero.jpg" class="card-img-top" alt="...">
-                    <div class="card-body">
-                        <p class="card-title"> Llavero </p>
-                        <p class="card-text"> <strong> $1000 </strong> </p>
-                        <a href="#" class="btn colorBtn"> Comprar </a>
-                    </div>
-                </div>
-            </div>
-
-            <div class="col-xl-3 col-md-4 col-sm-12">
-                <div class="card text-center">
-                    <img src="../img/botella.jpg" class="card-img-top" alt="...">
-                    <div class="card-body">
-                        <p class="card-title"> Botella </p>
-                        <p class="card-text"> <strong> $1500 </strong> </p>
-                        <a href="#" class="btn colorBtn"> Comprar </a>
-                    </div>
-                </div>
-            </div>
-
-            <div class="col-xl-3 col-md-4 col-sm-12">
-                <div class="card text-center">
-                    <img src="../img/vaso.jpg" class="card-img-top" alt="...">
-                    <div class="card-body">
-                        <p class="card-title"> Vaso Termico </p>
-                        <p class="card-text"> <strong> $2000 </strong> </p>
-                        <a href="#" class="btn colorBtn"> Comprar </a>
-                    </div>
-                </div>
-            </div>
-
-            <div class="col-xl-3 col-md-4 col-sm-12">
-                <div class="card text-center">
-                    <img src="../img/termo.jpg" class="card-img-top" alt="...">
-                    <div class="card-body">
-                        <p class="card-title"> Termo </p>
-                        <p class="card-text"> <strong> $3000 </strong> </p>
-                        <a href="#" class="btn colorBtn"> Comprar </a>
-                    </div>
-                </div>
-            </div>
-
-            <div class="col-xl-3 col-md-4 col-sm-12">
-                <div class="card text-center">
-                    <img src="../img/campera.jpg" class="card-img-top" alt="...">
-                    <div class="card-body">
-                        <p class="card-title"> Campera </p>
-                        <p class="card-text"> <strong> $9500 </strong> </p>
-                        <a href="#" class="btn colorBtn"> Comprar </a>
-                    </div>
-                </div>
-            </div>
-
-            <div class="col-xl-3 col-md-4 col-sm-12">
-                <div class="card text-center">
-                    <img src="../img/gorra.jpg" class="card-img-top" alt="...">
-                    <div class="card-body">
-                        <p class="card-title"> Gorra </p>
-                        <p class="card-text"> <strong> $2500 </strong> </p>
-                        <a href="#" class="btn colorBtn"> Comprar </a>
-                    </div>
-                </div>
-            </div>
-
-            <div class="col-xl-3 col-md-4 col-sm-12">
-                <div class="card text-center">
-                    <img src="../img/remera.jpg" class="card-img-top" alt="...">
-                    <div class="card-body">
-                        <p class="card-title"> Remera </p>
-                        <p class="card-text"> <strong> $4500 </strong> </p>
-                        <a href="#" class="btn colorBtn"> Comprar </a>
-                    </div>
-                </div>
-            </div>
-
-            <div class="col-xl-3 col-md-4 col-sm-12">
-                <div class="card text-center">
-                    <img src="../img/buzo.jpg" class="card-img-top" alt="...">
-                    <div class="card-body">
-                        <p class="card-title"> Buzo </p>
-                        <p class="card-text"> <strong> $8500 </strong> </p>
-                        <a href="#" class="btn colorBtn"> Comprar </a>
-                    </div>
-                </div>
-            </div>
-
-        </div>
-
-
-
-
 
     </main>
 
