--- a/html/eltropi.html
+++ b/html/eltropi.html
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-    <header class="navbar navbar-expand-lg">
+    <header class="navbar navbar-expand-lg" data-bs-theme="dark">
         <nav class="container-fluid">
             <a class="navbar-brand" href="../index.html">
                 <img class="logo" src="../img/tropilogo.png" alt="logo tropitango">
@@ -44,37 +44,55 @@
     </header>
 
     <main>
-        <div class="row align-items-center">
-            <div class="card mb-3 cardTropi" style="max-width: 90%;">
+        <div class="container">
             <div class="row align-items-center">
-                <div class="col-md-4">
-                    <img src="../img/puerta.jpg" class="img-fluid" alt="Puerta de Tropitango">
-                </div>
-                <div class="col-md-8">
-                    <div class="card-body">
-                        <h5 class="card-title"> Historia </h5>
-                        <p class="card-text"> El Tropi nació en 1980 en el seno de una sociedad de fomento llamada AFUT, en El Talar. Originalmente se trataba de un baile de ambiente familiar organizado por los dueños de la confitería de esa institución, que eran fanáticos del tango. En ese entonces, tocaban orquestas y el promedio de público se limitaba a 15 parejas, una realidad muy diferente a la actual. Con los años, los shows de cumbia se añadieron a las jornadas para, finalmente, conformar el nombre que aún tiene el lugar. <br> Un tiempo después, Tropitango se mudó desde su punto de origen a ruta 197 y Lavalle, a dos kilómetros de su locación actual. Allí fue un verdadero furor y forjó gran parte de sus años dorados con presentaciones de bandas de cumbia nacionales e internacionales, top en la década de los '90.
-                        </p>
+                <div class="card mb-3 cardTropi" style="max-width: 90%;">
+                    <div class="row align-items-center">
+                        <div class="col-md-4">
+                            <img src="../img/puerta.jpg" class="img-fluid" alt="Puerta de Tropitango">
+                        </div>
+                        <div class="col-md-8">
+                            <div class="card-body">
+                                <h5 class="card-title"> Historia </h5>
+                                <p class="card-text"> El Tropi nació en 1980 en el seno de una sociedad de fomento
+                                    llamada AFUT, en El Talar. Originalmente se trataba de un baile de ambiente familiar
+                                    organizado por los dueños de la confitería de esa institución, que eran fanáticos
+                                    del tango. En ese entonces, tocaban orquestas y el promedio de público se limitaba a
+                                    15 parejas, una realidad muy diferente a la actual. Con los años, los shows de
+                                    cumbia se añadieron a las jornadas para, finalmente, conformar el nombre que aún
+                                    tiene el lugar. <br> Un tiempo después, Tropitango se mudó desde su punto de origen
+                                    a ruta 197 y Lavalle, a dos kilómetros de su locación actual. Allí fue un verdadero
+                                    furor y forjó gran parte de sus años dorados con presentaciones de bandas de cumbia
+                                    nacionales e internacionales, top en la década de los '90.
+                                </p>
+                            </div>
+                        </div>
                     </div>
                 </div>
-            </div>
-        </div>
 
-        <div class="card mb-3 cardTropi" style="max-width: 90%;">
-            <div class="row">
-                <div class="col-md-4">
-                    <img src="../img/damasgratis.jpg" class="img-fluid rounded-start" alt="Damas Gratis en Tropitango">
-                </div>
-                <div class="col-md-8">
-                    <div class="card-body">
-                        <h5 class="card-title"> Actualidad </h5>
-                        <p class="card-text"> En el 2001 recaló en la Colectora Este para darle continuidad a una marca más que registrada en la zona. Conocida como «la catedral de la cumbia» o «el tropi» es muy frecuentada por futbolistas famosos como Tevez, Riquelme y Otamendi, entre otros.La mejor discoteca para bailar cumbia de Buenos Aires. Visitada por famosos y destacados invitados, podrás disfrutar aca toda la cumbia en un lugar imponente. Ubicada en Tigre, Zona Norte, esta discoteca se especializa en Música Tropical.
-                        </p>
+                <div class="card mb-3 cardTropi" style="max-width: 90%;">
+                    <div class="row">
+                        <div class="col-md-4">
+                            <img src="../img/damasgratis.jpg" class="img-fluid rounded-start"
+                                alt="Damas Gratis en Tropitango">
+                        </div>
+                        <div class="col-md-8">
+                            <div class="card-body">
+                                <h5 class="card-title"> Actualidad </h5>
+                                <p class="card-text"> En el 2001 recaló en la Colectora Este para darle continuidad a
+                                    una marca más que registrada en la zona. Conocida como «la catedral de la cumbia» o
+                                    «el tropi» es muy frecuentada por futbolistas famosos como Tevez, Riquelme y
+                                    Otamendi, entre otros.La mejor discoteca para bailar cumbia de Buenos Aires.
+                                    Visitada por famosos y destacados invitados, podrás disfrutar aca toda la cumbia en
+                                    un lugar imponente. Ubicada en Tigre, Zona Norte, esta discoteca se especializa en
+                                    Música Tropical.
+                                </p>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
-    </div>
     </main>
 
     <footer>
