--- a/html/shows.html
+++ b/html/shows.html
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-    <header class="navbar navbar-expand-lg">
+    <header class="navbar navbar-expand-lg" data-bs-theme="dark">
         <nav class="container-fluid">
             <a class="navbar-brand" href="../index.html">
                 <img class="logo" src="../img/tropilogo.png" alt="logo tropitango">
@@ -44,41 +44,41 @@
     </header>
 
     <main>
-
-        <div class="titulos mt-1">
-            <h1> Proximos Shows </h1>
-        </div>
-
-        <div class="row text-center">
-                    <div id="carouselExampleFade" class="carousel slide carousel-fade showCarousel">
-                <div class="carousel-inner">
-                    <div class="carousel-item active">
-                        <img class="fotoShow img-fluid" src="../img/viernes.jpg" alt="Show viernes">
-                    </div>
-                    <div class="carousel-item">
-                        <img class="fotoShow img-fluid" src="../img/sabado.jpg" alt="Show sabado">
-                    </div>
-                    <div class="carousel-item">
-                        <img class="fotoShow img-fluid" src="../img/domingo.jpg" alt="Show domingo">
-                    </div>
-                </div>
-                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleFade"
-                    data-bs-slide="prev">
-                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                    <span class="visually-hidden">Previous</span>
-                </button>
-                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleFade"
-                    data-bs-slide="next">
-                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                    <span class="visually-hidden">Next</span>
-                </button>
+        <div class="container">
+            <div class="titulos mt-1">
+                <h1> Proximos Shows </h1>
             </div>
-        </div>
 
-        <div class="divShow">
-            <h2 class="textoShow"> Todos los fines de semana shows en vivo de las mejores bandas de cumbia nacionales e
-                internacionales.
-            </h2>
+            <div class="row text-center">
+                <div id="carouselExampleFade" class="carousel slide carousel-fade showCarousel">
+                    <div class="carousel-inner">
+                        <div class="carousel-item active">
+                            <img class="fotoShow img-fluid" src="../img/viernes.jpg" alt="Show viernes">
+                        </div>
+                        <div class="carousel-item">
+                            <img class="fotoShow img-fluid" src="../img/sabado.jpg" alt="Show sabado">
+                        </div>
+                        <div class="carousel-item">
+                            <img class="fotoShow img-fluid" src="../img/domingo.jpg" alt="Show domingo">
+                        </div>
+                    </div>
+                    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleFade"
+                        data-bs-slide="prev">
+                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                        <span class="visually-hidden">Previous</span>
+                    </button>
+                    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleFade"
+                        data-bs-slide="next">
+                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                        <span class="visually-hidden">Next</span>
+                    </button>
+                </div>
+            </div>
+
+            <div class="divShow">
+                <h2 class="textoShow"> Todos los fines de semana shows en vivo de las mejores bandas de cumbia
+                    nacionales e internacionales.
+                </h2>
 
                 <iframe class="videoShow" src="https://www.youtube.com/embed/W-MCTgHbKtU" title="YouTube video player"
                     frameborder="0"
@@ -92,8 +92,9 @@
                     allowfullscreen>
                 </iframe>
 
-        </div>
+            </div>
 
+        </div>
     </main>
 
     <footer>
