--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-    <header class="navbar navbar-expand-lg">
+    <header class="navbar navbar-expand-lg" data-bs-theme="dark">
         <nav class="container-fluid">
             <a class="navbar-brand" href="index.html">
                 <img class="logo" src="img/tropilogo.png" alt="logo tropitango">
@@ -48,12 +48,15 @@
             <div class="py-5">
                 <h1 class="display-5 fw-bold text-white"> La Catedral de la Cumbia</h1>
                 <div class="col-lg-6 mx-auto">
-                    <p class="fs-5 mb-4 text-white"> Bienvenido a la pagina web de Tropitango, la mejor discoteca para bailar cumbia de Buenos Aires. Visitada por famosos y destacados invitados del ambito nacional e internacional, podrás disfrutar aca, en Zona Norte, toda la musica tropical en un lugar imponente. </p>
-                    <div class="d-grid d-sm-flex justify-content-sm-center">
-                        <button type="button" class="btn colorBtn btn-lg px-4 me-sm-3 fw-bold">
+                    <p class="fs-5 mb-4 text-white"> Bienvenido a la pagina web de Tropitango, la mejor discoteca para
+                        bailar cumbia de Buenos Aires. Visitada por famosos y destacados invitados del ambito nacional e
+                        internacional, podrás disfrutar aca, en Zona Norte, toda la musica tropical en un lugar
+                        imponente. </p>
+                    <div class="d-grid d-sm-flex justify-content-center">
+                        <button type="button" class="btn colorBtn btn-sm px-4 me-sm-3 fw-bold botones">
                             <a class="text-white" href="html/eltropi.html"> Comenzar </a>
                         </button>
-                        <button type="button" class="btn colorBtnSpotify btn-lg px-4">
+                        <button type="button" class="btn colorBtnSpotify btn-sm px-4 me-sm-3 fw-bold botones">
                             <a class="text-white" target="_blank"
                                 href="https://open.spotify.com/artist/52qKMYhEb3BpIXhvsEhuB2"> Spotify </a> </button>
                     </div>
