ajustes video y Sass

--- a/html/eltropi.html
+++ b/html/eltropi.html
@@ -27,16 +27,16 @@
                         <a class="nav-link active text-white" aria-current="page" href="../index.html">Inicio</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link text-white" href="eltropi.html">El Tropi</a>
+                        <a class="nav-link active" href="eltropi.html">El Tropi</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link text-white" href="shows.html">Shows</a>
+                        <a class="nav-link active" href="shows.html">Shows</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link text-white" href="productos.html">Productos</a>
+                        <a class="nav-link active" href="productos.html">Productos</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link text-white" href="contacto.html">Contacto</a>
+                        <a class="nav-link active" href="contacto.html">Contacto</a>
                     </li>
                 </ul>
             </div>
@@ -45,49 +45,47 @@
 
     <main>
         <div class="container">
-            <div class="row align-items-center">
-                <div class="card mb-3 cardTropi" style="max-width: 90%;">
-                    <div class="row align-items-center">
-                        <div class="col-md-4">
-                            <img src="../img/puerta.jpg" class="img-fluid" alt="Puerta de Tropitango">
-                        </div>
-                        <div class="col-md-8">
-                            <div class="card-body">
-                                <h5 class="card-title"> Historia </h5>
-                                <p class="card-text"> El Tropi nació en 1980 en el seno de una sociedad de fomento
-                                    llamada AFUT, en El Talar. Originalmente se trataba de un baile de ambiente familiar
-                                    organizado por los dueños de la confitería de esa institución, que eran fanáticos
-                                    del tango. En ese entonces, tocaban orquestas y el promedio de público se limitaba a
-                                    15 parejas, una realidad muy diferente a la actual. Con los años, los shows de
-                                    cumbia se añadieron a las jornadas para, finalmente, conformar el nombre que aún
-                                    tiene el lugar. <br> Un tiempo después, Tropitango se mudó desde su punto de origen
-                                    a ruta 197 y Lavalle, a dos kilómetros de su locación actual. Allí fue un verdadero
-                                    furor y forjó gran parte de sus años dorados con presentaciones de bandas de cumbia
-                                    nacionales e internacionales, top en la década de los '90.
-                                </p>
-                            </div>
+            <div class="card mb-3 cardTropi">
+                <div class="row align-items-center">
+                    <div class="col-md-4">
+                        <img src="../img/puerta.jpg" class="img-fluid card-img" alt="Puerta de Tropitango">
+                    </div>
+                    <div class="col-md-8">
+                        <div class="card-body">
+                            <h5 class="card-title"> Historia </h5>
+                            <p class="card-text"> El Tropi nació en 1980 en el seno de una sociedad de fomento
+                                llamada AFUT, en El Talar. Originalmente se trataba de un baile de ambiente familiar
+                                organizado por los dueños de la confitería de esa institución, que eran fanáticos
+                                del tango. En ese entonces, tocaban orquestas y el promedio de público se limitaba a
+                                15 parejas, una realidad muy diferente a la actual. Con los años, los shows de
+                                cumbia se añadieron a las jornadas para, finalmente, conformar el nombre que aún
+                                tiene el lugar. <br> Un tiempo después, Tropitango se mudó desde su punto de origen
+                                a ruta 197 y Lavalle, a dos kilómetros de su locación actual. Allí fue un verdadero
+                                furor y forjó gran parte de sus años dorados con presentaciones de bandas de cumbia
+                                nacionales e internacionales, top en la década de los '90.
+                            </p>
                         </div>
                     </div>
                 </div>
+            </div>
 
-                <div class="card mb-3 cardTropi" style="max-width: 90%;">
-                    <div class="row">
-                        <div class="col-md-4">
-                            <img src="../img/damasgratis.jpg" class="img-fluid rounded-start"
-                                alt="Damas Gratis en Tropitango">
-                        </div>
-                        <div class="col-md-8">
-                            <div class="card-body">
-                                <h5 class="card-title"> Actualidad </h5>
-                                <p class="card-text"> En el 2001 recaló en la Colectora Este para darle continuidad a
-                                    una marca más que registrada en la zona. Conocida como «la catedral de la cumbia» o
-                                    «el tropi» es muy frecuentada por futbolistas famosos como Tevez, Riquelme y
-                                    Otamendi, entre otros.La mejor discoteca para bailar cumbia de Buenos Aires.
-                                    Visitada por famosos y destacados invitados, podrás disfrutar aca toda la cumbia en
-                                    un lugar imponente. Ubicada en Tigre, Zona Norte, esta discoteca se especializa en
-                                    Música Tropical.
-                                </p>
-                            </div>
+            <div class="card mb-3 cardTropi">
+                <div class="row align-items-center">
+                    <div class="col-md-4">
+                        <img src="../img/damasgratis.jpg" class="img-fluid card-img"
+                            alt="Damas Gratis en Tropitango">
+                    </div>
+                    <div class="col-md-8">
+                        <div class="card-body">
+                            <h5 class="card-title"> Actualidad </h5>
+                            <p class="card-text"> En el 2001 recaló en la Colectora Este para darle continuidad a
+                                una marca más que registrada en la zona. Conocida como «la catedral de la cumbia» o
+                                «el tropi» es muy frecuentada por futbolistas famosos como Tevez, Riquelme y
+                                Otamendi, entre otros.La mejor discoteca para bailar cumbia de Buenos Aires.
+                                Visitada por famosos y destacados invitados, podrás disfrutar aca toda la cumbia en
+                                un lugar imponente. Ubicada en Tigre, Zona Norte, esta discoteca se especializa en
+                                Música Tropical.
+                            </p>
                         </div>
                     </div>
                 </div>
