--- a/html/shows.html
+++ b/html/shows.html
@@ -27,16 +27,16 @@
                         <a class="nav-link active text-white" aria-current="page" href="../index.html">Inicio</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link text-white" href="eltropi.html">El Tropi</a>
+                        <a class="nav-link active" href="eltropi.html">El Tropi</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link text-white" href="shows.html">Shows</a>
+                        <a class="nav-link active" href="shows.html">Shows</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link text-white" href="productos.html">Productos</a>
+                        <a class="nav-link active" href="productos.html">Productos</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link text-white" href="contacto.html">Contacto</a>
+                        <a class="nav-link active" href="contacto.html">Contacto</a>
                     </li>
                 </ul>
             </div>
@@ -44,7 +44,7 @@
     </header>
 
     <main>
-        <div class="container">
+        <section class="container">
             <div class="titulos mt-1">
                 <h1> Proximos Shows </h1>
             </div>
@@ -73,26 +73,30 @@
                         <span class="visually-hidden">Next</span>
                     </button>
                 </div>
-            </div>
+        </section>
 
-            <div class="divShow">
-                <h2 class="textoShow"> Todos los fines de semana shows en vivo de las mejores bandas de cumbia
-                    nacionales e internacionales.
-                </h2>
+        <section class="divShow">
+            <h2 class="textoShow"> Todos los fines de semana shows en vivo de las mejores bandas de cumbia
+                nacionales e internacionales.
+            </h2>
 
+            <div class="container-fluid text-center">
                 <iframe class="videoShow" src="https://www.youtube.com/embed/W-MCTgHbKtU" title="YouTube video player"
                     frameborder="0"
                     allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                     allowfullscreen>
                 </iframe>
+            </div>
 
+            <div class="container-fluid text-center">
                 <iframe class="videoShow" src="https://www.youtube.com/embed/wPZ_t2TIcwA" title="YouTube video player"
                     frameborder="0"
                     allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                     allowfullscreen>
                 </iframe>
-
             </div>
+
+        </section>
 
         </div>
     </main>
