--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <header class="navbar navbar-expand-lg" data-bs-theme="dark">
         <nav class="container-fluid">
             <a class="navbar-brand" href="index.html">
-                <img class="logo" src="img/tropilogo.png" alt="logo tropitango">
+                <img class="logo img-fluid" src="img/tropilogo.png" alt="logo tropitango">
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -24,19 +24,19 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item">
-                        <a class="nav-link active text-white" aria-current="page" href="index.html">Inicio</a>
+                        <a class="nav-link active " aria-current="page" href="index.html">Inicio</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link text-white" href="html/eltropi.html">El Tropi</a>
+                        <a class="nav-link active" href="html/eltropi.html">El Tropi</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link text-white" href="html/shows.html">Shows</a>
+                        <a class="nav-link active" href="html/shows.html">Shows</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link text-white" href="html/productos.html">Productos</a>
+                        <a class="nav-link active" href="html/productos.html">Productos</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link text-white" href="html/contacto.html">Contacto</a>
+                        <a class="nav-link active" href="html/contacto.html">Contacto</a>
                     </li>
                 </ul>
             </div>
@@ -46,17 +46,16 @@
     <main class="inicio">
         <div class="text-secondary px-4 py-5 text-center">
             <div class="py-5">
-                <h1 class="display-5 fw-bold text-white"> La Catedral de la Cumbia</h1>
-                <div class="col-lg-6 mx-auto">
+                <h1 class="display-6 fw-bold text-white"> La Catedral de la Cumbia</h1>
+                <div class="col-lg-7 mx-auto">
                     <p class="fs-5 mb-4 text-white"> Bienvenido a la pagina web de Tropitango, la mejor discoteca para
                         bailar cumbia de Buenos Aires. Visitada por famosos y destacados invitados del ambito nacional e
-                        internacional, podrás disfrutar aca, en Zona Norte, toda la musica tropical en un lugar
-                        imponente. </p>
+                        internacional, podrás disfrutar aca, en Zona Norte, de toda la musica tropical. </p>
                     <div class="d-grid d-sm-flex justify-content-center">
-                        <button type="button" class="btn colorBtn btn-sm px-4 me-sm-3 fw-bold botones">
+                        <button type="button" class="btn colorBtn btn-md px-4 me-sm-3 fw-bold botones">
                             <a class="text-white" href="html/eltropi.html"> Comenzar </a>
                         </button>
-                        <button type="button" class="btn colorBtnSpotify btn-sm px-4 me-sm-3 fw-bold botones">
+                        <button type="button" class="btn colorBtnSpotify btn-md px-4 me-sm-3 fw-bold botones">
                             <a class="text-white" target="_blank"
                                 href="https://open.spotify.com/artist/52qKMYhEb3BpIXhvsEhuB2"> Spotify </a> </button>
                     </div>
