--- a/html/contacto.html
+++ b/html/contacto.html
@@ -24,19 +24,19 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item">
-                        <a class="nav-link active text-white" aria-current="page" href="../index.html">Inicio</a>
+                        <a class="nav-link active" aria-current="page" href="../index.html">Inicio</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link text-white" href="eltropi.html">El Tropi</a>
+                        <a class="nav-link active" href="eltropi.html">El Tropi</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link text-white" href="shows.html">Shows</a>
+                        <a class="nav-link active" href="shows.html">Shows</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link text-white" href="productos.html">Productos</a>
+                        <a class="nav-link active" href="productos.html">Productos</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link text-white" href="contacto.html">Contacto</a>
+                        <a class="nav-link active" href="contacto.html">Contacto</a>
                     </li>
                 </ul>
             </div>
