--- a/html/eltropi.html
+++ b/html/eltropi.html
@@ -4,15 +4,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>TROPITANGO BAILABLE</title>
+    <title>Sobre El Tropi - TROPITANGO BAILABLE</title>
+    <!-- BOOTSTRAP -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
     <link rel="shortcut icon" href="../img/tropilogo.png" type="image/x-icon">
+    <!-- CSS -->
     <link rel="stylesheet" href="../css/estilo.css">
+    <!-- ANIMATE -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
 </head>
 
 <body>
-    <header class="navbar navbar-expand-lg" data-bs-theme="dark">
+    <header class="navbar navbar-expand-lg sticky-top" data-bs-theme="dark">
         <nav class="container-fluid">
             <a class="navbar-brand" href="../index.html">
                 <img class="logo" src="../img/tropilogo.png" alt="logo tropitango">
@@ -24,7 +28,7 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item">
-                        <a class="nav-link active text-white" aria-current="page" href="../index.html">Inicio</a>
+                        <a class="nav-link active" aria-current="page" href="../index.html">Inicio</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link active" href="eltropi.html">El Tropi</a>
@@ -45,7 +49,7 @@
 
     <main>
         <div class="container">
-            <div class="card mb-3 cardTropi">
+            <div class="card mb-3 cardTropi animate__animated animate__fadeInLeft">
                 <div class="row align-items-center">
                     <div class="col-md-4">
                         <img src="../img/puerta.jpg" class="img-fluid card-img" alt="Puerta de Tropitango">
@@ -69,7 +73,7 @@
                 </div>
             </div>
 
-            <div class="card mb-3 cardTropi">
+            <div class="card mb-3 cardTropi animate__animated animate__fadeInRight">
                 <div class="row align-items-center">
                     <div class="col-md-4">
                         <img src="../img/damasgratis.jpg" class="img-fluid card-img"
