--- a/index.html
+++ b/index.html
@@ -5,14 +5,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TROPITANGO BAILABLE</title>
+    <meta name="description" content="Tropitango Bailable, la mejor discoteca para bailar musica tropical en Buenos Aires.">
+    <!-- BOOTSTRAP -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
     <link rel="shortcut icon" href="img/tropilogo.png" type="image/x-icon">
+    <!-- CSS -->
     <link rel="stylesheet" href="css/estilo.css">
+    <!-- ANIMATE -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
 </head>
 
 <body>
-    <header class="navbar navbar-expand-lg" data-bs-theme="dark">
+    <header class="navbar navbar-expand-lg sticky-top" data-bs-theme="dark">
         <nav class="container-fluid">
             <a class="navbar-brand" href="index.html">
                 <img class="logo img-fluid" src="img/tropilogo.png" alt="logo tropitango">
@@ -46,7 +51,7 @@
     <main class="inicio">
         <div class="text-secondary px-4 py-5 text-center">
             <div class="py-5">
-                <h1 class="display-6 fw-bold text-white"> La Catedral de la Cumbia</h1>
+                <h1 class="display-6 fw-bold text-white animate__animated animate__backInUp"> La Catedral de la Cumbia</h1>
                 <div class="col-lg-7 mx-auto">
                     <p class="fs-5 mb-4 text-white"> Bienvenido a la pagina web de Tropitango, la mejor discoteca para
                         bailar cumbia de Buenos Aires. Visitada por famosos y destacados invitados del ambito nacional e
