ajustes scroll lateral y fotoproducto

--- a/html/eltropi.html
+++ b/html/eltropi.html
@@ -5,7 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sobre El Tropi - TROPITANGO BAILABLE</title>
-    <meta name="description" content="Tropitango Bailable, la mejor discoteca para bailar musica tropical en Buenos Aires.">
+    <meta name="description"
+        content="Tropitango Bailable, la mejor discoteca para bailar musica tropical en Buenos Aires.">
     <!-- BOOTSTRAP -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
@@ -50,7 +51,7 @@
 
     <main>
         <div class="container">
-            <div class="card mb-3 cardTropi animate__animated animate__fadeInLeft">
+            <div class="card mb-3 cardTropi">
                 <div class="row align-items-center">
                     <div class="col-md-4">
                         <img src="../img/puerta.jpg" class="img-fluid card-img" alt="Puerta de Tropitango">
@@ -74,11 +75,10 @@
                 </div>
             </div>
 
-            <div class="card mb-3 cardTropi animate__animated animate__fadeInRight">
+            <div class="card mb-3 cardTropi">
                 <div class="row align-items-center">
                     <div class="col-md-4">
-                        <img src="../img/damasgratis.jpg" class="img-fluid card-img"
-                            alt="Damas Gratis en Tropitango">
+                        <img src="../img/damasgratis.jpg" class="img-fluid card-img" alt="Damas Gratis en Tropitango">
                     </div>
                     <div class="col-md-8">
                         <div class="card-body">
