--- a/html/productos.html
+++ b/html/productos.html
@@ -5,15 +5,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Productos - TROPITANGO BAILABLE</title>
-    <meta name="description" content="Tropitango Bailable, la mejor discoteca para bailar musica tropical en Buenos Aires.">
+    <meta name="description"
+        content="Tropitango Bailable, la mejor discoteca para bailar musica tropical en Buenos Aires.">
     <!-- BOOTSTRAP -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
     <link rel="shortcut icon" href="../img/tropilogo.png" type="image/x-icon">
     <!-- CSS -->
     <link rel="stylesheet" href="../css/estilo.css">
-        <!-- ANIMATE -->
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
+    <!-- ANIMATE -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
 
 </head>
 
@@ -30,7 +31,7 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item">
-                        <a class="nav-link active"  aria-current="page" href="../index.html">Inicio</a>
+                        <a class="nav-link active" aria-current="page" href="../index.html">Inicio</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link active" href="eltropi.html">El Tropi</a>
@@ -52,16 +53,16 @@
     <main>
         <div class="container">
             <div class="titulos mt-1">
-                <h1> Productos </h1>
+                <h1 class="titProducto"> Productos </h1>
             </div>
 
             <div class="row contenedorProductos">
                 <div class="col-xl-3 col-md-4 col-sm-12">
                     <div class="card text-center">
-                        <img src="../img/llavero.jpg" class="card-img-top" alt="...">
+                        <img src="../img/fundaproducto.png" class="card-img-top" alt="Funda de Celular Tropitango">
                         <div class="card-body">
-                            <p class="card-title"> Llavero </p>
-                            <p class="card-text"> <strong> $1000 </strong> </p>
+                            <p class="card-title"> Funda de Celular </p>
+                            <p class="card-text"> <strong> $4000 </strong> </p>
                             <a href="#" class="btn colorBtn"> Comprar </a>
                         </div>
                     </div>
@@ -69,10 +70,10 @@
 
                 <div class="col-xl-3 col-md-4 col-sm-12">
                     <div class="card text-center">
-                        <img src="../img/botella.jpg" class="card-img-top" alt="...">
+                        <img src="../img/botellaproducto.png" class="card-img-top" alt="Botella termica Tropitango">
                         <div class="card-body">
-                            <p class="card-title"> Botella </p>
-                            <p class="card-text"> <strong> $1500 </strong> </p>
+                            <p class="card-title"> Botella Termica </p>
+                            <p class="card-text"> <strong> $8000 </strong> </p>
                             <a href="#" class="btn colorBtn"> Comprar </a>
                         </div>
                     </div>
@@ -80,43 +81,10 @@
 
                 <div class="col-xl-3 col-md-4 col-sm-12">
                     <div class="card text-center">
-                        <img src="../img/vaso.jpg" class="card-img-top" alt="...">
-                        <div class="card-body">
-                            <p class="card-title"> Vaso Termico </p>
-                            <p class="card-text"> <strong> $2000 </strong> </p>
-                            <a href="#" class="btn colorBtn"> Comprar </a>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="col-xl-3 col-md-4 col-sm-12">
-                    <div class="card text-center">
-                        <img src="../img/termo.jpg" class="card-img-top" alt="...">
-                        <div class="card-body">
-                            <p class="card-title"> Termo </p>
-                            <p class="card-text"> <strong> $3000 </strong> </p>
-                            <a href="#" class="btn colorBtn"> Comprar </a>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="col-xl-3 col-md-4 col-sm-12">
-                    <div class="card text-center">
-                        <img src="../img/campera.jpg" class="card-img-top" alt="...">
-                        <div class="card-body">
-                            <p class="card-title"> Campera </p>
-                            <p class="card-text"> <strong> $9500 </strong> </p>
-                            <a href="#" class="btn colorBtn"> Comprar </a>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="col-xl-3 col-md-4 col-sm-12">
-                    <div class="card text-center">
-                        <img src="../img/gorra.jpg" class="card-img-top" alt="...">
+                        <img src="../img/gorraproducto.png" class="card-img-top" alt="Gorra trucker Tropitango">
                         <div class="card-body">
                             <p class="card-title"> Gorra </p>
-                            <p class="card-text"> <strong> $2500 </strong> </p>
+                            <p class="card-text"> <strong> $5000 </strong> </p>
                             <a href="#" class="btn colorBtn"> Comprar </a>
                         </div>
                     </div>
@@ -124,10 +92,21 @@
 
                 <div class="col-xl-3 col-md-4 col-sm-12">
                     <div class="card text-center">
-                        <img src="../img/remera.jpg" class="card-img-top" alt="...">
+                        <img src="../img/gorroproducto.png" class="card-img-top" alt="Gorro de lana Tropitango">
+                        <div class="card-body">
+                            <p class="card-title"> Gorro de lana </p>
+                            <p class="card-text"> <strong> $3500 </strong> </p>
+                            <a href="#" class="btn colorBtn"> Comprar </a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-xl-3 col-md-4 col-sm-12">
+                    <div class="card text-center">
+                        <img src="../img/remera1producto.png" class="card-img-top" alt="Remera Tropitango">
                         <div class="card-body">
                             <p class="card-title"> Remera </p>
-                            <p class="card-text"> <strong> $4500 </strong> </p>
+                            <p class="card-text"> <strong> $6500 </strong> </p>
                             <a href="#" class="btn colorBtn"> Comprar </a>
                         </div>
                     </div>
@@ -135,10 +114,32 @@
 
                 <div class="col-xl-3 col-md-4 col-sm-12">
                     <div class="card text-center">
-                        <img src="../img/buzo.jpg" class="card-img-top" alt="...">
+                        <img src="../img/remera2producto.png" class="card-img-top" alt="Remera big logo Tropitango">
+                        <div class="card-body">
+                            <p class="card-title"> Remera Big Logo </p>
+                            <p class="card-text"> <strong> $6500 </strong> </p>
+                            <a href="#" class="btn colorBtn"> Comprar </a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-xl-3 col-md-4 col-sm-12">
+                    <div class="card text-center">
+                        <img src="../img/buzo2producto.png" class="card-img-top" alt="Buzo con capucha Tropitango">
+                        <div class="card-body">
+                            <p class="card-title"> Buzo Canguro </p>
+                            <p class="card-text"> <strong> $12000 </strong> </p>
+                            <a href="#" class="btn colorBtn"> Comprar </a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-xl-3 col-md-4 col-sm-12">
+                    <div class="card text-center">
+                        <img src="../img/buzoproducto.png" class="card-img-top" alt="Buzo Tropitango">
                         <div class="card-body">
                             <p class="card-title"> Buzo </p>
-                            <p class="card-text"> <strong> $8500 </strong> </p>
+                            <p class="card-text"> <strong> $10500 </strong> </p>
                             <a href="#" class="btn colorBtn"> Comprar </a>
                         </div>
                     </div>
