--- a/html/shows.html
+++ b/html/shows.html
@@ -5,7 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Proximos Shows - TROPITANGO BAILABLE</title>
-    <meta name="description" content="Tropitango Bailable, la mejor discoteca para bailar musica tropical en Buenos Aires.">
+    <meta name="description"
+        content="Tropitango Bailable, la mejor discoteca para bailar musica tropical en Buenos Aires.">
     <!-- BOOTSTRAP -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
