--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TROPITANGO BAILABLE</title>
-    <meta name="description" content="Tropitango Bailable, la mejor discoteca para bailar musica tropical en Buenos Aires.">
+    <meta name="description"
+        content="Tropitango Bailable, la mejor discoteca para bailar musica tropical en Buenos Aires.">
     <!-- BOOTSTRAP -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
@@ -51,7 +52,8 @@
     <main class="inicio">
         <div class="text-secondary px-4 py-5 text-center">
             <div class="py-5">
-                <h1 class="display-6 fw-bold text-white animate__animated animate__backInUp"> La Catedral de la Cumbia</h1>
+                <h1 class="display-6 fw-bold text-white animate__animated animate__backInUp"> La Catedral de la Cumbia
+                </h1>
                 <div class="col-lg-7 mx-auto">
                     <p class="fs-5 mb-4 text-white"> Bienvenido a la pagina web de Tropitango, la mejor discoteca para
                         bailar cumbia de Buenos Aires. Visitada por famosos y destacados invitados del ambito nacional e
