--- a/html/eltropi.html
+++ b/html/eltropi.html
@@ -18,6 +18,8 @@
 </head>
 
 <body>
+
+    <!-- HEADER -->
     <header class="navbar navbar-expand-lg sticky-top" data-bs-theme="dark">
         <nav class="container-fluid">
             <a class="navbar-brand" href="../index.html">
@@ -49,16 +51,17 @@
         </nav>
     </header>
 
+    <!-- MAIN -->
     <main>
         <div class="container">
-            <div class="card mb-3 cardTropi">
+            <div class="card  cardTropi">
                 <div class="row align-items-center">
-                    <div class="col-md-4">
+                    <div class="col-xl-4">
                         <img src="../img/puerta.jpg" class="img-fluid card-img" alt="Puerta de Tropitango">
                     </div>
-                    <div class="col-md-8">
+                    <div class="col-xl-8">
                         <div class="card-body">
-                            <h5 class="card-title"> Historia </h5>
+                            <h5 class="card-title"> <strong> Historia </strong> </h5>
                             <p class="card-text"> El Tropi nació en 1980 en el seno de una sociedad de fomento
                                 llamada AFUT, en El Talar. Originalmente se trataba de un baile de ambiente familiar
                                 organizado por los dueños de la confitería de esa institución, que eran fanáticos
@@ -77,12 +80,12 @@
 
             <div class="card mb-3 cardTropi">
                 <div class="row align-items-center">
-                    <div class="col-md-4">
+                    <div class="col-xl-4">
                         <img src="../img/damasgratis.jpg" class="img-fluid card-img" alt="Damas Gratis en Tropitango">
                     </div>
-                    <div class="col-md-8">
+                    <div class="col-xl-8">
                         <div class="card-body">
-                            <h5 class="card-title"> Actualidad </h5>
+                            <h5 class="card-title"> <strong> Actualidad </strong> </h5>
                             <p class="card-text"> En el 2001 recaló en la Colectora Este para darle continuidad a
                                 una marca más que registrada en la zona. Conocida como «la catedral de la cumbia» o
                                 «el tropi» es muy frecuentada por futbolistas famosos como Tevez, Riquelme y
@@ -98,6 +101,7 @@
         </div>
     </main>
 
+    <!-- FOOTER -->
     <footer>
         <div>
             <img class="logoFooter" src="../img/tropilogo.png" alt="tropitango logo">
@@ -120,6 +124,7 @@
         </div>
     </footer>
 
+    <!-- BOOTSTRAP -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
         crossorigin="anonymous"></script>
