--- a/html/contacto.html
+++ b/html/contacto.html
@@ -18,6 +18,8 @@
 </head>
 
 <body>
+
+    <!-- HEADER -->
     <header class="navbar navbar-expand-lg sticky-top" data-bs-theme="dark">
         <nav class="container-fluid">
             <a class="navbar-brand" href="../index.html">
@@ -49,6 +51,7 @@
         </nav>
     </header>
 
+    <!-- MAIN -->
     <main>
         <div class="container">
             <div class="titulos mt-1">
@@ -88,6 +91,7 @@
 
     </main>
 
+    <!-- FOOTER -->
     <footer>
         <div>
             <img class="logoFooter" src="../img/tropilogo.png" alt="tropitango logo">
@@ -110,6 +114,7 @@
         </div>
     </footer>
 
+    <!-- BOOTSTRAP -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
         crossorigin="anonymous"></script>
