--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 </head>
 
 <body>
+    <!-- HEADER -->
     <header class="navbar navbar-expand-lg sticky-top" data-bs-theme="dark">
         <nav class="container-fluid">
             <a class="navbar-brand" href="index.html">
@@ -49,6 +50,7 @@
         </nav>
     </header>
 
+    <!-- MAIN -->
     <main class="inicio">
         <div class="text-secondary px-4 py-5 text-center">
             <div class="py-5">
@@ -71,6 +73,7 @@
         </div>
     </main>
 
+    <!-- FOOTER -->
     <footer>
         <div>
             <img class="logoFooter" src="img/tropilogo.png" alt="tropitango logo">
@@ -93,6 +96,7 @@
         </div>
     </footer>
 
+    <!-- BOOTSTRAP -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
         crossorigin="anonymous"></script>
